--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "app for taking user testimonial ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "user",
@@ -12,5 +13,17 @@
     "shivansh"
   ],
   "author": "Shivansh Barthwal",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "mongoose-paginate-v2": "^1.8.2",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
+  }
 }
