--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "app for taking user testimonial ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
@@ -23,7 +24,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "mongoose-paginate-v2": "^1.8.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3"
