--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/react": "^5.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
@@ -17,11 +19,15 @@
     "@mui/styled-engine-sc": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-video": "^1.5.3",
+    "react-wordcloud": "^1.2.7",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13"
   },
